--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -1,15 +1,19 @@
-.page {
+.user {
     margin-left: 100px;
     float: left;
-    background: white;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 300px;
     outline: 2px solid black;
 }
 
-.widgets {
+.player:nth-child(odd) {
+    background-color: lightgray;
+}
+
+.central {
+    text-align: center;
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 300px;
     outline: 2px solid black;
 }
