--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -1,26 +1,21 @@
 .user {
-    margin-left: 100px;
     float: left;
-    width: 200px;
+    width: 500px;
     height: 300px;
-    outline: 2px solid black;
+    outline: 1px solid black;
 }
 
 .player {
-    background-color: gray;
+    background-color: black;
+    color: white;
 }
 
 .central {
-    text-align: right;
+    text-align: center;
     float: left;
-    width: 200px;
+    width: 500px;
     height: 300px;
-    outline: 2px solid black;
-}
-
-.rockwell {
-    font-family: "Rockwell";
-    font-size: larger;
+    outline: 1px solid black;
 }
 
 .heading {
@@ -29,16 +24,24 @@
     background: rgb(29, 26, 26);
     color: white;
     padding: 40px;
+    font-family: "Rockwell";
 }
 
 .instructions {
+    float: inline-start;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-family: "Alkatra";
     background: rgb(31, 31, 207);
     color: white;
-    padding: 50px;
+    padding: 20px;
+}
+
+.playersTitle {
+    font-family: "Alkatra";
+    color: white;
 }
 
 .roleSelect {
