--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -16,8 +16,10 @@
     text-align: center;
     float: left;
     width: 500px;
-    height: auto;
+    height: 350px;
     outline: 1px solid black;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .heading {
