--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: rgb(0, 119, 255);
+    background-color: green;
 }
 
 code {
