--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -108,3 +108,12 @@
 .sortSelect {
     width: 200px;
 }
+
+.playerImage {
+    position: relative;
+    float: right;
+    margin-right: 50px;
+    margin-top: -26px;
+    width: 170px;
+    height: 170px;
+}
