--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -1,13 +1,20 @@
+.Test {
+    margin: auto;
+    width: 90%;
+}
+
 .user {
-    float: right;
     text-align: justify;
-    width: 500px;
+    width: 600px;
     height: auto;
     min-height: 100px;
-    outline: 1px solid white;
+    max-height: 700px;
+    outline: 2px solid black;
     background-color: gray;
     color: white;
-    position: relative;
+    overflow-y: auto;
+    margin-left: auto;
+    margin-top: 50px;
 }
 
 .player:nth-child(odd) {
@@ -25,13 +32,15 @@
 .central {
     text-align: justify;
     float: left;
-    width: 500px;
-    height: 350px;
+    width: 600px;
+    height: 700px;
     color: white;
     background-color: gray;
-    outline: 1px solid black;
+    outline: 2px solid black;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-top: 30px;
+    margin-bottom: 700px;
 }
 
 .heading {
@@ -54,11 +63,15 @@
 }
 
 .playersTitle {
-    font-family: "Alkatra";
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     color: white;
     text-align: center;
     background-color: black;
-    margin-bottom: 0%;
+    margin-bottom: 50px;
+    width: 600px;
+    position: absolute;
+    outline: 2px solid black;
 }
 
 .roleSelectHeadings {
@@ -84,7 +97,6 @@
 }
 
 .addUserBox {
-    float: right;
     color: white;
     font-family: "Alkatra";
 }
@@ -115,12 +127,52 @@
 
 .sortSelect {
     width: 200px;
+    margin-bottom: 20px;
 }
 
 .playerImage {
     position: relative;
     float: right;
-    margin-top: -24px;
-    width: 250px;
-    height: 250px;
+    margin-top: -10px;
+    width: 260px;
+    height: 260px;
+}
+
+.namesAndPositionText {
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    font-size: x-large;
+    text-align: center;
+    float: left;
+}
+
+.stats {
+    margin-top: 15px;
+    float: left;
+    margin-left: 15px;
+}
+
+.accordion {
+    background-color: black;
+    color: white;
+    width: 100%;
+    text-align: left;
+    transition: 0.4s;
+    outline: 1px solid white;
+}
+
+.active,
+.accordion:hover {
+    background-color: #ccc;
+}
+
+.teamTitle {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+    color: white;
+    text-align: center;
+    background-color: black;
+    width: 600px;
+    position: absolute;
+    margin-top: -30px;
+    outline: 2px solid black;
 }
