--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -88,6 +88,7 @@
     text-align: center;
     width: 1000px;
     color: black;
+    margin: auto;
 }
 
 .names {
@@ -149,13 +150,13 @@
     margin-top: 15px;
     float: left;
     margin-left: 15px;
+    position: relative;
 }
 
 .accordion {
     background-color: black;
     color: white;
-    width: 100%;
-    text-align: left;
+    text-align: center;
     transition: 0.4s;
     outline: 1px solid white;
 }
