--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -77,7 +77,8 @@
 .roleSelectHeadings {
     align-items: center;
     color: white;
-    font-family: "Alkatra";
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     text-align: center;
 }
 
@@ -86,9 +87,9 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 1000px;
     color: black;
     margin: auto;
+    width: 90%;
 }
 
 .names {
@@ -99,7 +100,10 @@
 
 .addUserBox {
     color: white;
-    font-family: "Alkatra";
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+    margin: auto;
+    margin-left: 100px;
 }
 
 .padding {
@@ -176,4 +180,8 @@
     position: absolute;
     margin-top: -30px;
     outline: 2px solid black;
+}
+
+.addUserButton {
+    float: right;
 }
