added user ratings, needs CSS tweeks

--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -98,6 +98,11 @@
     overflow-x: auto;
 }
 
+.playerRatingBox {
+    width: 70px;
+    overflow-x: auto;
+}
+
 .playerDescriptionBox {
     width: 200px;
     overflow-x: auto;
