--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -1,13 +1,17 @@
+.Test {
+    margin-left: 100px;
+}
+
 .user {
-    float: right;
+    float: left;
     text-align: justify;
-    width: 500px;
+    width: 600px;
     height: auto;
     min-height: 100px;
-    outline: 1px solid white;
+    outline: 1px solid black;
     background-color: gray;
     color: white;
-    position: relative;
+    margin-left: 50px;
 }
 
 .player:nth-child(odd) {
@@ -25,7 +29,7 @@
 .central {
     text-align: justify;
     float: left;
-    width: 500px;
+    width: 600px;
     height: 500px;
     color: white;
     background-color: gray;
@@ -35,12 +39,12 @@
 }
 
 .heading {
-    align-items: center;
-    text-align: center;
     background: rgb(29, 26, 26);
     color: white;
     padding: 40px;
     font-family: "Rockwell";
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 .instructions {
@@ -58,23 +62,17 @@
     color: white;
     text-align: center;
     background-color: black;
-    margin-bottom: 0%;
-}
-
-.roleSelectHeadings {
-    align-items: center;
-    color: white;
-    font-family: "Alkatra";
-    text-align: center;
+    width: 600px;
+    position: absolute;
 }
 
 .roleSelect {
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 1000px;
+    width: 200px;
     color: black;
+    float: right;
 }
 
 .names {
