--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -45,6 +45,7 @@
     font-family: "Rockwell";
     margin: auto;
     margin-bottom: 50px;
+    padding-left: 100px;
 }
 
 .instructions {
@@ -72,7 +73,6 @@
     text-align: center;
     width: 200px;
     color: black;
-    float: right;
 }
 
 .names {
@@ -82,9 +82,18 @@
 }
 
 .addUserBox {
-    float: right;
     color: white;
-    font-family: "Alkatra";
+    margin-top: 5px;
+    float: right;
+    width: 200px;
+}
+
+.AddOrDeleteUserButtons {
+    background-color: #000000;
+}
+
+.AddingAndDeletingUsers {
+    width: 200px;
 }
 
 .padding {
