--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -26,11 +26,17 @@
     height: 250px;
 }
 
+.playerNameAndPosition {
+    font-family: "Impact";
+    font-size: xx-large;
+    padding-left: 30px;
+}
+
 .central {
     text-align: justify;
     float: left;
     width: 600px;
-    height: 500px;
+    height: 700px;
     color: white;
     background-color: gray;
     outline: 1px solid black;
@@ -65,6 +71,8 @@
     background-color: black;
     width: 600px;
     position: absolute;
+    text-decoration: underline;
+    text-decoration-color: white;
 }
 
 .roleSelect {
@@ -76,7 +84,6 @@
 }
 
 .names {
-    bottom: 0%;
     position: fixed;
     color: white;
 }
@@ -130,9 +137,9 @@
 }
 
 .playerImage {
-    position: relative;
     float: right;
-    margin-top: -24px;
+    display: flex;
     width: 250px;
     height: 250px;
+    margin-top: -48px;
 }
