--- a/src/components/Test.css
+++ b/src/components/Test.css
@@ -13,6 +13,19 @@
     color: white;
     margin-left: 50px;
 }
+.userEdited {
+    text-align: justify;
+    float: left;
+    width: 550px;
+    height: auto;
+    min-height: 100px;
+    outline: 1px solid black;
+    background-color: gray;
+    color: white;
+    margin-left: 50px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
 
 .player:nth-child(odd) {
     background-color: black;
@@ -160,5 +173,5 @@
 }
 
 .userChangeRatings {
-    float: right;
+    float: left;
 }
