Adjusted position of site heading when adding user box is available

--- a/src/style.css
+++ b/src/style.css
@@ -186,3 +186,9 @@
     float: left;
     padding-left: 30px;
 }
+
+.roleSelectAndAddUser {
+    top: 0px;
+    position: absolute;
+    margin-left: 1100px;
+}
