--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,8 @@
     float: left;
     width: 550px;
     height: auto;
-    min-height: 100px;
     outline: 1px solid black;
-    background-color: gray;
+    background: gray;
     color: white;
     margin-left: 50px;
     overflow-y: auto;
@@ -30,21 +29,32 @@
 .player:nth-child(odd) {
     background-color: black;
     color: white;
-    height: 296px;
+    height: 298px;
 }
 
 .player:nth-child(even) {
     background-color: gray;
     color: white;
-    height: 296px;
+    height: 298px;
 }
 .playerWidget:nth-child(odd) {
+    background-color: black;
+    color: white;
+    height: 310px;
+}
+
+.playerWidget:nth-child(even) {
+    background-color: gray;
+    color: white;
+    height: 310px;
+}
+.playerWidgetAdmin:nth-child(odd) {
     background-color: black;
     color: white;
     height: 200px;
 }
 
-.playerWidget:nth-child(even) {
+.playerWidgetAdmin:nth-child(even) {
     background-color: gray;
     color: white;
     height: 200px;
@@ -173,6 +183,14 @@
     height: 200px;
     margin-top: -48px;
 }
+.playerImageUser {
+    float: right;
+    display: flex;
+    width: 200px;
+    height: 200px;
+    margin-top: 60px;
+    margin-right: -140px;
+}
 .playerImageEdit {
     float: right;
     display: flex;
@@ -190,8 +208,8 @@
 }
 
 .userChangeRatings {
-    float: left;
-    padding-left: 30px;
+    float: right;
+    padding-right: 30px;
 }
 .playerEdit:nth-child(odd) {
     background-color: black;
