--- a/src/style.css
+++ b/src/style.css
@@ -2,22 +2,12 @@
     margin-left: 50px;
 }
 
-.user {
-    float: left;
-    text-align: justify;
-    width: 550px;
-    height: auto;
-    min-height: 100px;
-    outline: 1px solid black;
-    background-color: gray;
-    color: white;
-    margin-left: 50px;
-}
 .userEdited {
     text-align: justify;
     float: left;
     width: 550px;
     height: auto;
+    min-height: 200px;
     outline: 1px solid black;
     background: gray;
     color: white;
@@ -251,4 +241,11 @@
 
 .roleSelectAndAddUser {
     width: 1000px;
+}
+
+.addPlayerInListText {
+    font-size: 60px;
+    font-family: "Impact";
+    text-align: center;
+    margin-top: 30px;
 }
