--- a/src/style.css
+++ b/src/style.css
@@ -253,3 +253,17 @@
 .roleSelectAndAddUser {
     width: 1000px;
 }
+:focus:not(:focus-visible) {
+    outline: 0;
+    box-shadow: none;
+}
+
+.trashcan {
+    background-size: cover;
+    background-color: transparent;
+    box-shadow: none;
+    outline: none;
+    outline-color: transparent;
+    width: 50px;
+    height: 50px;
+}
