--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: green;
+    background-image: url("https://i.pinimg.com/originals/82/01/3c/82013c180a08621410374eea880167ba.jpg");
 }
 
 code {
