--- a/src/style.css
+++ b/src/style.css
@@ -200,15 +200,22 @@
     display: flex;
     width: 200px;
     height: 200px;
-    margin-top: -48px;
+    margin-top: -46px;
+    border: 2px black;
+    background: rgb(39, 40, 45);
+    border-radius: 5px;
 }
+
 .playerImageUser {
     float: right;
     display: flex;
     width: 200px;
     height: 200px;
-    margin-top: 60px;
+    margin-top: 61px;
     margin-right: -140px;
+    border: 2px black;
+    background: rgb(39, 40, 45);
+    border-radius: 5px;
 }
 .playerImageEdit {
     float: right;
